--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+      <plugin>            
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <webXml>WebContent\WEB-INF\web.xml</webXml>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
