--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>RESTful LakeshoreMarket Services</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>\app\WebContent\WEB-INF\cxf.xml</param-value>
+    <param-value>/WebContent/WEB-INF/cxf.xml</param-value>
   </context-param>
   <listener>
     <listener-class>
