--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
         <artifactId>cxf-rt-transports-http-jetty</artifactId>
         <version>${cxf.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-ws-policy</artifactId>
+      <version>${cxf.version}</version>
+    </dependency>
+
 
     <!--dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
