--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>lakeshoremarket</name>
   <description>project3</description>
   <properties>
-    <cxf.version>2.7.17</cxf.version>
+    <cxf.version>3.1.3</cxf.version>
   </properties>
   <dependencies>
     
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>3.0.5.RELEASE</version>
+      <version>4.2.2</version>
     </dependency>
   </dependencies>
   <build>
