--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>4.2.2</version>
+      <version>4.2.2.RELEASE</version>
     </dependency>
   </dependencies>
   <build>
