--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
     </dependency-->
 
 
-    <!--dependency>
+    <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>2.4.1.3</version>
-    </dependency-->
+    </dependency>
 
     <dependency>
         <groupId>javax</groupId>
