--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.online.lakeshoremarket</groupId>
-  <artifactId>lakeshore-market</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>lsm</artifactId>
+  <version>v</version>
   <packaging>war</packaging>
   <name>lakeshoremarket</name>
   <description>project3</description>
